# QaterialHotReloadHelloWorld

./: .gitignore  CMakeLists.txt  Readme.md
app/HelloWorld/: Main.cpp
app/HotReload/: Main.cpp
cmake/: FetchDependencies.cmake  FetchQOlm.cmake  FetchQaterial.cmake  FetchQaterialHotReload.cmake  FetchQtGeneratorCMake.cmake  Version.cmake
lib/HelloWorld/: HelloWorld.cpp  HelloWorld.hpp
lib/HelloWorld/Details/: Property.hpp
qml/HelloWorld/: Main.qml  Page.qml  qmldir
